<resources>
    <string name="app_name" translatable="false">Estudasses+</string>
    <string name="username" translatable="false">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="existing_user">Existing User? Go to login page</string>
    <string name="not_signedUp_yet">Not signed in yet? Sign up here</string>
    <string name="reg_error">Registration Error</string>
    <string name="log_error">Something went wrong please check your credentials and internet connection</string>
    <string name="reg_success">Successfully registered</string>
    <string name="log_success">Welcome!</string>
    <string name="email_already_exists">User with this email already exist</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="not_available_user">User not available or password has changed</string>
    <string name="password_forgot">Forgot Password?</string>
    <string name="password_link_sent">Reset link was sent to your email</string>
    <string name="password_link_not_sent">Something went wrong… Please insert the correct email</string>
    <string name="verify_email">Verification email has been sent</string>
    <string name="verify_email_not_sent">Verification email not sent… Please check your credentials and internet connection</string>
    <string name="email_not_verified">Verify Email</string>
    <string name="username_exists">Username already exists</string>
    <string name="username_empty">Username can\'t be empty</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="password_not_confirmed">Please confirm password</string>
    <string name="password_conf_different">Password and confirmation are different</string>
    <string name="password_too_small">Password needs to have at least 6 characters</string>
    <string name="sessions">Sessions</string>
    <string name="study">Study</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="new_plan">New Plan</string>
    <string name="new_session">New Session</string>
    <string name="time">Time</string>
    <string name="subject">Subject</string>
    <string name="subject_hint">Subject name</string>
    <string name="description">Description</string>
    <string name="description_hint">Write the session description here</string>
    <string name="add_session">Add Session</string>
    <string name="pls_time">Please choose the time for the session</string>
    <string name="pls_date">Please choose the date for the session</string>
    <string name="selected_time_label">Time: </string>
    <string name="selected_date_label">Date: </string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="pls_local">\"Please choose the location\"</string>
    <string name="sensors_warning">* Settings apply when creating a new study plan</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="account_settings">Account</string>
    <string name="notification_settings">Notifications</string>
    <string name="sensor_settings">Sensors</string>
    <string name="language_settings">Language</string>
    <string name="help_settings">Help</string>
    <string name="session_start_notif">Session Start</string>
    <string name="study_start_notif">Study Start</string>
    <string name="study_break_notif">Study Break</string>
    <string name="study_end_notif">Study End</string>
    <string name="phone">Phone</string>
    <string name="apply">Apply</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="home">Home</string>
    <string name="active_plan">Active Plan</string>
    <string name="my_plans">My Plans</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_plan">Are you sure you want to delete this plan?</string>
    <string name="pls_enter_email">Please enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="no_plan_selected">Please select a plan</string>
    <string name="create_plan">Create new plan</string>
    <string name="add_plan">Add plan</string>
    <string name="duration">Duration</string>
    <string name="color">Color</string>
    <string name="new_subject">New Subject</string>
    <string name="insert_subject_added">Insert subject name to be added</string>
    <string name="subject_err">Subject name can\'t be empty</string>
    <string name="subject_too_long">Subject name too long</string>
    <string name="color_err">Please select a color</string>
    <string name="desc_err">Description shouldn\'t be empty</string>
    <string name="exit_plan_confirmation">This plan isn\'t saved. Do you want to continue?</string>
    <string name="break_notif">50min have passed since you last stopped… You can rest now!</string>
    <string name="study_notif">Time to work! We\'re working on </string>
    <string name="endStudy_notif">Plan has ended… If you want to continue please start again or select another plan</string>
    <string name="no_plan">No active plan</string>
    <string name="resend_email">Resend Email</string>
    <string name="to_access_sessions">To access sessions</string>
    <string name="no_sessions_found">No sessions found</string>
    <string-array name="languages_array">
        <item>Portuguese - PT</item>
        <item>English - EN</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_text">To access direct help, please send questions to the following email:</string>
    <string name="estudasses_email">estudassesplus@gmail.com</string>
    <string name="avatar_failure">Could not upload avatar</string>
    <string name="avatar_success">Avatar successfully uploaded!</string>
    <string name="avatar_failed_download">Failed to download avatar</string>
    <string name="expand">Expand</string>
    <string name="enroll">Enroll</string>
    <string name="open">Open</string>
    <string name="access_plans_here">Access Plans here</string>
    <string name="my_plan">My plan</string>
    <string name="no_suggested_plan">No suggested session</string>
    <string name="suggested_plan">Suggested Plan</string>
</resources>