<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="173dp"
        android:layout_height="157dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="102dp"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/re_password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/re_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/email" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/grey_rounded_button"
        android:hint="@string/signIn"
        android:textColor="#077E83"
        android:textColorHint="#077E83" />

    <TextView
        android:id="@+id/btnpreLogin"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnsignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/existing_user" />


</RelativeLayout>