<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="115dp"
        app:srcCompat="@drawable/icon" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/iconImage"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/email"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/grey_rounded_button"
        android:hint="@string/Login"
        android:textColor="#077E83"
        android:textColorHint="#077E83" />

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/not_signedIn_yet" />
    <TextView
        android:id="@+id/passwordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/password_forgot" />


</RelativeLayout>