<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/goBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_sessions" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/newSessionTitle"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="102dp"
        android:gravity="center"
        android:text="@string/new_session"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- <EditText
            android:id="@+id/editTime"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:inputType="time" /> -->

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="@string/subject_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectLabel" />
    <TextView
        android:id="@+id/subjectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="70dp"
        android:labelFor="@+id/editSubject"
        android:text="@string/subject"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newSessionTitle" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="298dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|bottom"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="16dp"
        android:labelFor="@+id/editDescription"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#304D71"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/selectedLocal"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="42dp"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/dateButton"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        app:layout_constraintTop_toBottomOf="@+id/selectedTime" />

    <TextView
        android:id="@+id/selectedTime"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/timeButton"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/timeLabel"
        app:layout_constraintTop_toBottomOf="@+id/editSubject" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/editDate"
        android:text="@string/date"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel" />

    <ImageView
        android:id="@+id/locationButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <ImageView
        android:id="@+id/timeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newSessionTitle" />

    <ImageView
        android:id="@+id/dateButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="72dp"
        android:text="@string/time"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editSubject" />

</androidx.constraintlayout.widget.ConstraintLayout>