<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotificationSettingsActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/goBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_arrow_back" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_set_bell" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sessionStart"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/session_start_notif"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/studyStart"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/sessionStart"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/study_start_notif"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/studyBreak"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/studyStart"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/study_break_notif"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/studyEnd"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/studyBreak"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/study_end_notif"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
