<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlan">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/goBack"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_arrow_back" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="163dp"
                        android:src="@drawable/ic_book" />
                </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:focusable="true" >

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#666868" />

            <TextView
                android:id="@+id/title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:text="@string/new_plan"
                android:textSize="35sp"/>

            <LinearLayout
                android:id="@+id/durationLayout"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/title">

                <TextView
                    android:id="@+id/durationLabel"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/durationPicker"
                    android:text="@string/duration"
                    android:textSize="20sp" />

                <NumberPicker
                    android:id="@+id/durationPicker"
                    android:layout_width="60dp"
                    android:layout_marginStart="200dp"
                    android:layout_height="70dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/colorLayout"
                android:layout_below="@id/durationLayout"
                android:layout_width="350dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" >

                <TextView
                    android:id="@+id/colorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/colorSpinner"
                    android:text="@string/color"
                    android:textSize="20sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/colorSpinner"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:dropDownWidth="200dp"
                    android:layout_marginStart="95dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/subjectLayout"
                android:layout_width="350dp"
                android:layout_below="@id/colorLayout"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" >

                <TextView
                    android:id="@+id/subjectLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/subjectSpinner"
                    android:text="@string/subject"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/subjectSpinner"
                    android:layout_marginStart="75dp"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:dropDownWidth="200dp" />

                <Button
                    android:id="@+id/addSubjectBtn"
                    android:layout_marginStart="5dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_add_circle" />
            </LinearLayout>




            <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/subjectLayout">

                <TextView
                    android:id="@+id/descriptionLabel"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/editDescription"
                    android:text="@string/description"
                    android:textSize="20sp" />

                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="start|bottom"
                    android:hint="@string/description_hint"
                    android:inputType="textMultiLine" />
            </LinearLayout>



            <Button
                android:id="@+id/addPlanBtn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#1F517C"
                android:text="@string/add_plan"
                android:layout_below="@id/descriptionLayout"
                android:textAlignment="center"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


